force-app/main/default/objects/AE_Individual_Event__c/AE_Individual_Event__c.object-meta.xml
<CustomObject>
    <label>AE Individual Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE Individual Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>