force-app/main/default/objects/AE_Individual_Event__c/fields/AE_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_End_Date__c</fullName>
    <label>AE End Date</label>
    <type>Date</type>
</CustomField>