force-app/main/default/objects/AE_Individual_Event__c/fields/AE_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_Start_Date__c</fullName>
    <label>AE Start Date</label>
    <type>Date</type>
</CustomField>