force-app/main/default/objects/AE_Individual_Event__c/fields/New_Potential_Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>New_Potential_Adverse_Event__c</fullName>
    <label>New Potential Adverse Event</label>
    <referenceTo>New_Potential_Adverse_Event__c</referenceTo>
    <relationshipLabel>AE Individual Events</relationshipLabel>
    <relationshipName>AE_Individual_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>